<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/theme_changer"
        android:icon="@drawable/ic_light_mode_24"
        android:title="@string/theme_changer"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>